<resources>
    <string name="app_name">My Application</string>
    <string name="LogIn">Log In</string>
    <string name="CreateAccount">CREATE ACCOUNT</string>
    <string name="Exit">X</string>
    <string name="prompt_username">Username</string>
    <string name="AdminPrompt">Admin</string>
    <string name="EOPrompt">Event Organizer</string>
    <string name="AdminKeyPrompt">Insert Admin Key</string>
    <string name="AdminMainPage">ADMIN</string>
    <string name="AdminAccountManage">ACCOUNT MANAGEMENT</string>
    <string name="EventType">EVENT TYPE</string>
    <string name="EventDescription">DESCRIPTION</string>
    <string name="ParticipantsAllowed">NUMBER OF PARTICIPANTS ALLOWED</string>
    <string name="Other">OTHER</string>
    <string name="CreateEvent">CREATE EVENT</string>

    <string name="Account1">Account1</string>
    <string name="Account2">Account2</string>
    <string name="Account3">Account3</string>
    <string name="DateJoined">DD/MM/YYYY</string>
    <string name="UserNameTitle">USER NAME</string>
    <string name="DateJoinedTitle">DATE JOINED</string>






    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>