<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#62B5F6"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_CreateAccountTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateAccount"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="91dp" />

        <EditText
            android:id="@+id/editText_CreateAccountScreen_username"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/prompt_username"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/radioButton_adminPrompt"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:checked="false"
            android:text="@string/AdminPrompt" />

        <RadioButton
            android:id="@+id/radioButton_EOPrompt"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/EOPrompt" />

        <EditText
            android:id="@+id/editText_AdminKey"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/AdminKeyPrompt"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/editText_CreateAccount_Password"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/prompt_password"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp" />

        <Button
            android:id="@+id/btn_CreateAccountScreen_CreateAccount"
            android:layout_width="300dp"
            android:layout_height="94dp"
            android:layout_gravity="center|center_horizontal"
            android:background="#F3B807"
            android:text="@string/CreateAccount"
            android:visibility="visible" />

    </LinearLayout>
</RelativeLayout>