<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#62B5F6"
    tools:context=".CreateEventActivity">

    <ImageButton
        android:id="@+id/imageButton_Exit_CreateEventScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_delete"
        android:translationX="350dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="#03A9F4" />

    <TextView
        android:id="@+id/textView_CreateEventScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/CreateEvent"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="40sp"
        android:textStyle="bold"
        android:translationY="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="638dp"
        android:orientation="vertical"
        android:translationY="70dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="76dp" />

        <EditText
            android:id="@+id/editTextText_EventTitle"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/EventType"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextText_EventDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/EventDescription"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextText_NumberParticipants"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/ParticipantsAllowed"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextText_Other"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/Other"
            android:textAlignment="center" />

    </LinearLayout>
</RelativeLayout>