<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#62B5F6"
    tools:context=".LogInScreen_Activity">

    <Button
        android:id="@+id/btn_Exit_LogInScreen"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:text="@string/Exit"
        android:translationX="320dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LogIn"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/editText_Username"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:ems="10"
            android:inputType="text"
            android:text="@string/prompt_username"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editText_Password"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/prompt_password"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/btn_LogInConfirm"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:text="@string/LogIn" />

    </LinearLayout>
</RelativeLayout>