<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#62B5F6"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_Exit"
            android:layout_width="75dp"
            android:layout_height="76dp"
            android:text="@string/Exit"
            android:translationX="330dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="69dp" />

        <ImageView
            android:id="@+id/imageView_LogInScreen"
            android:layout_width="match_parent"
            android:layout_height="383dp"
            android:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/btn_logIn"
            android:layout_width="253dp"
            android:layout_height="119dp"
            android:layout_gravity="center"
            android:text="@string/LogIn" />

        <Button
            android:id="@+id/btn_CreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:layout_gravity="center"
            android:text="@string/CreateAccount" />
    </LinearLayout>

</RelativeLayout>